--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<li class="menu__item"><a href="#" class="menu__link">Home</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">About</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">Pages</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">Services</a></li>
+							<li class="menu__item"><a href="#services" class="menu__link">Services</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -91,7 +91,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__services services">
+			<section id="services" class="page__services services">
 				<div class="services__container">
 					<div class="services__content">
 						<a href="#" class="services__label label">services</a>
