--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, suspendisse varius enim in eros
 								elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor.</p>
 						</div>
-						<a href="#" class="services__button button">All services</a>
+
 					</div>
 					<div class="services__items">
 						<div class="services__column">
@@ -198,6 +198,93 @@
 						<img src="img/advantages/01.jpg" alt="Image">
 					</div>
 				</div>
+			</section>
+			<section class="page__testimonials testimonials">
+				<div class="testimonials__container">
+					<div class="testimonials__content">
+						<a href="#" class="testimonials__label label">testimonials</a>
+						<h2 class="testimonials__title">See what our clients say </h2>
+						<div class="testimonials__body">
+							<div class="testimonials__text">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in
+									eros
+									elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla,
+									ut
+									commodo diam libero.
+								</p>
+							</div>
+							<a href="#" class="testimonials__button button">Get in touch</a>
+						</div>
+					</div>
+					<div class="testimonials__items">
+						<article class="testimonials__item item-testimonials">
+							<div class="item-testimonials__user user-testimonials">
+								<div class="user-testimonials__avatar user-testimonials__avatar--1">
+									<img src="img/testimonials/01.jpg" alt="Avatar">
+								</div>
+								<div class="user-testimonials__body">
+									<div class="user-testimonials__name">John Doe</div>
+									<div class="user-testimonials__company">Company Name</div>
+								</div>
+							</div>
+							<h4 class="item-testimonials__title">"I recommend this agency"</h4>
+							<div class="item-testimonials__text">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in
+									eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum
+									nulla, ut commodo diam libero.
+								</p>
+							</div>
+							<div class="item-testimonials__rating">
+								<img src="img/testimonials/rating.svg" alt="Rating">
+							</div>
+						</article>
+						<article class="testimonials__item item-testimonials">
+							<div class="item-testimonials__user user-testimonials">
+								<div class="user-testimonials__avatar user-testimonials__avatar--2">
+									<img src="img/testimonials/02.jpg" alt="Avatar">
+								</div>
+								<div class="user-testimonials__body">
+									<div class="user-testimonials__name">Alice Smith</div>
+									<div class="user-testimonials__company">Company Name</div>
+								</div>
+							</div>
+							<h4 class="item-testimonials__title">"The support is awesome" </h4>
+							<div class="item-testimonials__text">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in
+									eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum
+									nulla, ut commodo diam libero.
+								</p>
+							</div>
+							<div class="item-testimonials__rating">
+								<img src="img/testimonials/rating.svg" alt="Rating">
+							</div>
+						</article>
+						<article class="testimonials__item item-testimonials">
+							<div class="item-testimonials__user user-testimonials">
+								<div class="user-testimonials__avatar user-testimonials__avatar--3">
+									<img src="img/testimonials/03.jpg" alt="Avatar">
+								</div>
+								<div class="user-testimonials__body">
+									<div class="user-testimonials__name">Sophia Miller</div>
+									<div class="user-testimonials__company">Company Name</div>
+								</div>
+							</div>
+							<h4 class="item-testimonials__title">“A game changer for us”</h4>
+							<div class="item-testimonials__text">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in
+									eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum
+									nulla, ut commodo diam libero.
+								</p>
+							</div>
+							<div class="item-testimonials__rating">
+								<img src="img/testimonials/rating.svg" alt="Rating">
+							</div>
+						</article>
+					</div>
 			</section>
 		</main>
 		<footer class="footer"></footer>
