--- a/index.html
+++ b/index.html
@@ -286,8 +286,190 @@
 						</article>
 					</div>
 			</section>
+			<section class="page__blog blog">
+				<div class="blog__container">
+					<div class="blog__content">
+						<a href="#" class="blog__label label">Blog</a>
+						<h2 class="blog__title">Read our articles & news</h2>
+						<div class="blog__body">
+							<div class="blog__text">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in
+									eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum
+									nulla, ut commodo diam libero.
+								</p>
+							</div>
+							<a href="#" class="blog__button button">All Posts</a>
+						</div>
+					</div>
+					<div class="blog__items">
+						<article class="blog__item item-blog">
+							<div class="item-blog__header">
+								<a href="#" class="item-blog__image">
+									<img src="img/blog/01.jpg" alt="Image">
+								</a>
+								<a href="#" class="item-blog__category">Social Media</a>
+							</div>
+							<div class="item-blog__body">
+								<div class="item-blog__date">August 28, 2022</div>
+								<h4 class="item-blog__title">
+									<a href="#" class="item-blog__link-title">How to Use Social Proof in Marketing</a>
+								</h4>
+								<div class="item-blog__text">
+									<p>
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit lobortis arcu enim urna
+										adipiscing praesent velit viverra sit semper lorem.
+									</p>
+								</div>
+								<a href="#" class="item-blog__link">Read now</a>
+							</div>
+						</article>
+						<article class="blog__item item-blog">
+							<div class="item-blog__header">
+								<a href="#" class="item-blog__image">
+									<img src="img/blog/02.jpg" alt="Image">
+								</a>
+								<a href="#" class="item-blog__category">SEO </a>
+							</div>
+							<div class="item-blog__body">
+								<div class="item-blog__date">August 28, 2022</div>
+								<h4 class="item-blog__title">
+									<a href="#" class="item-blog__link-title">Make a great first impression with these
+										titles</a>
+								</h4>
+								<div class="item-blog__text">
+									<p>
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit lobortis arcu enim urna
+										adipiscing praesent velit viverra sit semper lorem.
+									</p>
+								</div>
+								<a href="#" class="item-blog__link">Read now</a>
+							</div>
+						</article>
+						<article class="blog__item item-blog">
+							<div class="item-blog__header">
+								<a href="#" class="item-blog__image">
+									<img src="img/blog/03.jpg" alt="Image">
+								</a>
+								<a href="#" class="item-blog__category">Strategy</a>
+							</div>
+							<div class="item-blog__body">
+								<div class="item-blog__date">August 28, 2022</div>
+								<h4 class="item-blog__title">
+									<a href="#" class="item-blog__link-title">How to Grab Your Reader’s Attention</a>
+								</h4>
+								<div class="item-blog__text">
+									<p>
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit lobortis arcu enim urna
+										adipiscing praesent velit viverra sit semper lorem.
+									</p>
+								</div>
+								<a href="#" class="item-blog__link">Read now</a>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
+			<section class="page__start start">
+				<div class="start__container">
+					<div class="start__body">
+						<div class="start__column">
+							<h2 class="start__title">Ready to start scaling<br> your business now?</h2>
+							<div class="start__text">
+								<p>
+									Lorem ipsum dolor sit am consectetur adipiscing varius enim in eros.
+								</p>
+							</div>
+						</div>
+						<div class="start__column">
+							<div class="start__actions">
+								<a href="#" class="start__button button">Our services</a>
+								<a href="#" class="start__button button button--dark">Contact us</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
-		<footer class="footer"></footer>
+		<footer class="footer">
+			<div class="footer__main main-footer">
+				<div class="main-footer__container">
+					<div class="main-footer__column">
+						<a href="#" class="main-footer__logo">
+							<img src="img/logo.svg" alt="logo">
+						</a>
+						<div class="main-footer__text">
+							<p>
+								Growfy is a template highly suitable for modern marketing agencies, digital studios,
+								startups and businesses. The design is made in the dark style, which makes the site
+								memorable and you can easily adapt it to your brand.
+							</p>
+						</div>
+						<div class="main-footer__social social">
+							<a href="" class="social__link">
+								<img src="img/social/01.svg" alt="social">
+							</a>
+							<a href="" class="social__link">
+								<img src="img/social/02.svg" alt="social">
+							</a>
+							<a href="" class="social__link">
+								<img src="img/social/03.svg" alt="social">
+							</a>
+							<a href="" class="social__link">
+								<img src="img/social/04.svg" alt="social">
+							</a>
+							<a href="" class="social__link">
+								<img src="img/social/05.svg" alt="social">
+							</a>
+						</div>
+					</div>
+					<div class="main-footer__column">
+						<div class="main-footer__label">Pages</div>
+						<nav class="main-footer__menu menu-footer">
+							<ul class="menu-footer__list">
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Home</a></li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">About</a></li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Services</a></li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Packages</a></li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Blog</a></li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Contact</a></li>
+							</ul>
+						</nav>
+					</div>
+					<div class="main-footer__column">
+						<div class="main-footer__label">Utility pages</div>
+						<nav class="main-footer__menu menu-footer">
+							<ul class="menu-footer__list">
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Instructions</a>
+								</li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Style guide</a></li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Licenses</a></li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Changelog</a></li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">404 Not found</a>
+								</li>
+								<li class="menu-footer__item"><a href="#" class="menu-footer__link">Password
+										protected</a></li>
+							</ul>
+						</nav>
+					</div>
+					<div class="main-footer__column">
+						<div class="main-footer__label">Subscribe to our newsletter</div>
+						<div class="main-footer__subscribe subscribe">
+							<div class="subscribe__text">Lorem ipsum dolor sit am consectetur adipiscing</div>
+							<form action="" class="subscribe__form">
+								<input placeholder="Enter your email" type="email" required class="subscribe__input">
+								<button type="submit" class="subscribe__button button">Subscribe</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer__bottom bottom-footer">
+				<div class="bottom-footer__container">
+					<div class="bottom-footer__copy">© 2024</div>
+				</div>
+			</div>
+		</footer>
 	</div>
 	<script src="js/main.js"></script>
 </body>
